static when-return